{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 53,
  "lineage": "a6669f64-68e3-e110-f02f-b28103942837",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "ecs-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:022581925951:loadbalancer/app/ecs-load-balancer/455fc712f4030161",
            "arn_suffix": "app/ecs-load-balancer/455fc712f4030161",
            "dns_name": "ecs-load-balancer-1161755788.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:022581925951:loadbalancer/app/ecs-load-balancer/455fc712f4030161",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-load-balancer",
            "security_groups": [
              "sg-0830b032c884be329"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0db64fb5caa487101"
              },
              {
                "subnet_id": "subnet-0e86de2e1da114311"
              }
            ],
            "subnets": [
              "subnet-0db64fb5caa487101",
              "subnet-0e86de2e1da114311"
            ],
            "vpc_id": "vpc-01b130db60aa02e18",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.test_public_sg",
            "aws_subnet.wordpressPubSN1",
            "aws_subnet.wordpressPubSN2",
            "aws_vpc.wordpressVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:022581925951:listener/app/ecs-load-balancer/455fc712f4030161/4457af8b32ea088e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:022581925951:targetgroup/ecs-target-group/e7779fdfbcf2bc21",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:022581925951:listener/app/ecs-load-balancer/455fc712f4030161/4457af8b32ea088e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:022581925951:loadbalancer/app/ecs-load-balancer/455fc712f4030161",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.ecs-load-balancer",
            "aws_alb_target_group.ecs-target-group",
            "aws_security_group.test_public_sg",
            "aws_subnet.wordpressPubSN1",
            "aws_subnet.wordpressPubSN2",
            "aws_vpc.wordpressVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "ecs-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:022581925951:targetgroup/ecs-target-group/e7779fdfbcf2bc21",
            "arn_suffix": "targetgroup/ecs-target-group/e7779fdfbcf2bc21",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:022581925951:targetgroup/ecs-target-group/e7779fdfbcf2bc21",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecs-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01b130db60aa02e18"
          },
          "dependencies": [
            "aws_vpc.wordpressVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wordpressIG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:022581925951:internet-gateway/igw-0eaecaa0656766b75",
            "id": "igw-0eaecaa0656766b75",
            "owner_id": "022581925951",
            "vpc_id": "vpc-01b130db60aa02e18"
          },
          "dependencies": [
            "aws_vpc.wordpressVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wordpressPubSN1-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04eb927da267e5a5a",
            "owner_id": "022581925951",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eaecaa0656766b75",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-01b130db60aa02e18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.wordpressIG",
            "aws_vpc.wordpressVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wordpressPubSN2-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0be95b338c4254b85",
            "owner_id": "022581925951",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eaecaa0656766b75",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-01b130db60aa02e18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.wordpressIG",
            "aws_vpc.wordpressVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wordpressPubSN1-RTAssn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0304d2180d3aba785",
            "route_table_id": "rtb-04eb927da267e5a5a",
            "subnet_id": "subnet-0db64fb5caa487101"
          },
          "dependencies": [
            "aws_internet_gateway.wordpressIG",
            "aws_route_table.wordpressPubSN1-RT",
            "aws_subnet.wordpressPubSN1",
            "aws_vpc.wordpressVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wordpressPubSN2-RTAssn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fbc0a6b534aaa14",
            "route_table_id": "rtb-0be95b338c4254b85",
            "subnet_id": "subnet-0e86de2e1da114311"
          },
          "dependencies": [
            "aws_internet_gateway.wordpressIG",
            "aws_route_table.wordpressPubSN2-RT",
            "aws_subnet.wordpressPubSN2",
            "aws_vpc.wordpressVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_master_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:022581925951:security-group/sg-069a5c6b521e5a79d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-069a5c6b521e5a79d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "testdb - rds sg",
            "name_prefix": "",
            "owner_id": "022581925951",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-01b130db60aa02e18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wordpressVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:022581925951:security-group/sg-0830b032c884be329",
            "description": "Test public access security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0830b032c884be329",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "200.0.0.0/24",
                  "200.0.0.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "test_public_sg",
            "name_prefix": "",
            "owner_id": "022581925951",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-01b130db60aa02e18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wordpressVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wordpressAppSN1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:022581925951:subnet/subnet-003ca04e99423d2cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "200.0.1.0/24",
            "id": "subnet-003ca04e99423d2cd",
            "map_public_ip_on_launch": false,
            "owner_id": "022581925951",
            "vpc_id": "vpc-01b130db60aa02e18"
          },
          "dependencies": [
            "aws_vpc.wordpressVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wordpressAppSN2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:022581925951:subnet/subnet-0341c2e9281962eaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "200.0.17.0/24",
            "id": "subnet-0341c2e9281962eaf",
            "map_public_ip_on_launch": false,
            "owner_id": "022581925951",
            "vpc_id": "vpc-01b130db60aa02e18"
          },
          "dependencies": [
            "aws_vpc.wordpressVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wordpressDataSN1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:022581925951:subnet/subnet-022fd2acd08b118d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "200.0.2.0/24",
            "id": "subnet-022fd2acd08b118d0",
            "map_public_ip_on_launch": false,
            "owner_id": "022581925951",
            "vpc_id": "vpc-01b130db60aa02e18"
          },
          "dependencies": [
            "aws_vpc.wordpressVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wordpressDataSN2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:022581925951:subnet/subnet-061d28ea486471ba7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "200.0.18.0/24",
            "id": "subnet-061d28ea486471ba7",
            "map_public_ip_on_launch": false,
            "owner_id": "022581925951",
            "vpc_id": "vpc-01b130db60aa02e18"
          },
          "dependencies": [
            "aws_vpc.wordpressVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wordpressPubSN1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:022581925951:subnet/subnet-0db64fb5caa487101",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "200.0.0.0/24",
            "id": "subnet-0db64fb5caa487101",
            "map_public_ip_on_launch": false,
            "owner_id": "022581925951",
            "vpc_id": "vpc-01b130db60aa02e18"
          },
          "dependencies": [
            "aws_vpc.wordpressVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wordpressPubSN2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:022581925951:subnet/subnet-0e86de2e1da114311",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "200.0.16.0/24",
            "id": "subnet-0e86de2e1da114311",
            "map_public_ip_on_launch": false,
            "owner_id": "022581925951",
            "vpc_id": "vpc-01b130db60aa02e18"
          },
          "dependencies": [
            "aws_vpc.wordpressVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wordpressVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:022581925951:vpc/vpc-01b130db60aa02e18",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "200.0.0.0/16",
            "default_network_acl_id": "acl-0b8b8833977fa1d26",
            "default_route_table_id": "rtb-0eeecde865020f882",
            "default_security_group_id": "sg-094353831e2d03670",
            "dhcp_options_id": "dopt-2cf46447",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01b130db60aa02e18",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0eeecde865020f882",
            "owner_id": "022581925951"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}